# notes

./: .discussions  .gitignore  .gitmodules  404.html  CNAME  Dockerfile  LICENSE  README.md  discussions  docker-compose.yml  hook.py  index.html  mkdocs.yml  nav.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
applications/common_applications/: index.html
article/20160829/: index.html
blog/: index.html
css/: extra.css
docs/: .nav.yml  .pages  index.md  liu-yan-ban.md  memo.md  message_board.md  site-message.md
docs/Play/: MAA_aknights.md
docs/android/: 内核编译与KernelSU集成.md
docs/applications/: .pages  common_applications.md
docs/article/: .pages  20160829.md
docs/assets/: extra.css
docs/blog/: .authors.yml  .pages
docs/essay/: .pages
docs/life/: .pages  cookbook.md  goods.md  life_note.md
docs/other/: .pages
docs/program_language/: .pages
docs/something/: memo.md
docs/technology/: .pages  memo.md
docs/tools/: .pages
index/: index.html
index./: index.html
js/: extra.js
life/cookbook/: index.html
life/goods/: index.html
liu-yan-ban/: index.html
message_board/: index.html
message_board./: index.html
overrides/: CNAME  base.html  home.html
overrides/css/: extra.css
overrides/deploy_scripts/: deploy.py  hook_copyright.py  hook_meta.py
overrides/partials/: comments.html  custom_content.html  footer.html  header.html  (+1 more)
scripts/: discussionFileConverter.py  hook_copyright.py  hook_meta_slug.py  nav2pages.py  queryDiscussions.py  requirements.txt
search/: search_index.json
site-message/: index.html
(+245 files in other folders)
